Fixed footer links and margin for navbar menu on smaller screens.

--- a/css/styles.css
+++ b/css/styles.css
@@ -754,7 +754,7 @@ li:hover {
         position: absolute;
         font-size: 30px;
         top: 470px;
-        right: 20px;
+        right: 25px;
     }
     .container-links {
         display: flex;
@@ -762,6 +762,9 @@ li:hover {
         align-items: center;
         justify-content: center;
         margin-top: 20px;
+    }
+    .footerlist {
+        font-size: 12px;
     }
     .social-icons {
         position: absolute;
@@ -788,7 +791,7 @@ li:hover {
     .logo {
         font-size: 16px;
     }
-    li {
+    .navlist {
         font-size: 12px;
         font-weight: 300;
         display: none;
@@ -796,6 +799,6 @@ li:hover {
     .fas.fa-bars {
         display: block;
         font-size: 20px;
-        margin-right: 200px;
+        margin-right: 240px;
     }
 }
